# poseidon

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  image_environment.yml  pyproject.toml  rectification_test.ipynb  test_notebook.ipynb
docs/: README.md
docs/tests/: test_compiled_funcs.sh  test_depth_map_plotter.py  test_depth_map_processor.py  test_grid_generator.py  test_rectifier.py
notebooks/: example_uses.ipynb  rectification_test.ipynb  test_notebook.ipynb
poseidon_core/: __init__.py  depth_map_plotter.py  depth_map_processor.py  depth_mapper.py  depth_plotter.py  grid_generation.py  grid_generator.py  image_rectifier.py  image_utils.py  label_method_test.py  photo_utils.py  plotting_utils.py  rectification_utils.py  rectifier.py  roadway_analyzer.py  test_notebook.ipynb  test_run.py
poseidon_deploy/: environment.yml  hpc_paths.template.env  poseidon-env-no-gpu.yml  poseidon-env.yml  poseidon-linux-64-lock.yml  poseidon-lock.yml
poseidon_deploy/calibration/: cam_calibration.ipynb
poseidon_deploy/hpc_submission_scripts/: calc_depths.csh  create_job_list.csh  create_job_lists.csh  filter_images.csh  flood_event_setup.csh  hpc_paths.env  hpc_paths.template.env  make_labels.csh  make_overlays.csh  make_rectify.csh  make_training_dataset.csh  predict_seg.csh  pull_and_save_images.csh  pull_and_save_photos.csh  segment_folder.csh  segment_lists.csh  train_model.csh
poseidon_deploy/hpc_submission_scripts/job_outputs/: image_pull.377587.out
poseidon_deploy/naiads/: run_calc_depths.py  run_create_file_lists.py  run_flood_event_setup.py  run_image_filter.py  run_image_pull.py  run_rectify.py
poseidon_deploy/segmentation/models/: CB_03_v13_segformer.json  DE_01_v1_segformer.json  all_sites_5_class_v3_segformer.json
poseidon_deploy/segmentation/seg_data_folder_template/config/: config_template.json
poseidon_utils/: __init__.py  archived_functions.py  depth_plotter.py  event_tracker.py  file_organizer.py  image_handler.py  prepare_job_lists.py
poseidon_utils/c_helpers/: pred_label_generator.cpp
poseidon_utils/src/: CMakeLists.txt
tests/: test_compiled_funcs.sh  test_depth_map_processor.py  test_event_tracker.py  test_file_organizer.py  test_grid_generator.py  test_image_handler.py
utils/: CMakeLists.txt
utils/c_helpers/: CMakeLists.txt  overlay_generator.cpp
