[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poseidon"
version = "0.1.0"
authors = [
  { name="Ryan McCune", email="rmccune@ncsu.edu" },
]
description = "POSEIDON is a Python-based scientific tool for automated flood-level extraction from imagery. It integrates image segmentation and georectification to detect water surfaces and estimate flood depths across real-world terrain."

[tool.setuptools.packages.find]
where = ["."]
